Fix travel post text alignment to be full justified

--- a/assets/styles/includes/_travel.scss
+++ b/assets/styles/includes/_travel.scss
@@ -27,6 +27,7 @@
     background-color: $white;
   }
   .post {
+    text-align: justify;
     margin-bottom: 20px;
     @include clearfix;
   }
